Update shadow when editing ContentSuggestions items

When adding or removing ContentSuggestions items, the size of the
collection may vary. This CL makes sure the audience is notified
of the change to update the shadow on the toolbar accordingly.

BUG=738352

Change-Id: I148239accc101390deff5117f9104a3bba814991