ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.mm
@@ -93,6 +93,7 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
     [self addEmptySectionPlaceholderIfNeeded:indexPath.section];
   }
       completion:^(BOOL) {
+        [self.audience contentSuggestionsDidScroll];
         // The context menu could be displayed for the deleted entry.
         [self.suggestionCommandHandler dismissContextMenu];
       }];
@@ -111,6 +112,7 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
     [self.collectionView deleteSections:[NSIndexSet indexSetWithIndex:section]];
   }
       completion:^(BOOL) {
+        [self.audience contentSuggestionsDidScroll];
         // The context menu could be displayed for the deleted entries.
         [self.suggestionCommandHandler dismissContextMenu];
       }];
@@ -127,7 +129,9 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
         addSectionsForSectionInfoToModel:@[ sectionInfo ]];
     [self.collectionView insertSections:addedSections];
   }
-                                completion:nil];
+      completion:^(BOOL) {
+        [self.audience contentSuggestionsDidScroll];
+      }];
 
   [self.collectionView performBatchUpdates:^{
     NSIndexPath* removedItem = [self.collectionUpdater
@@ -141,7 +145,9 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
                                       withSectionInfo:sectionInfo];
     [self.collectionView insertItemsAtIndexPaths:addedItems];
   }
-                                completion:nil];
+      completion:^(BOOL) {
+        [self.audience contentSuggestionsDidScroll];
+      }];
 }
 
 #pragma mark - UIViewController
